# simcache

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/: params.yaml  params_grid.yaml  plot.py  sim.py
results/: example.npz
src/simcache/: __init__.py  cli.py  core.py  iterations.py  store.py
src/simcache.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
